[package]
name = "moonbeam-core-primitives"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.1"

[dependencies]
account = { path = "../primitives/account", default-features = false }

fp-self-contained = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"account/std",
	"fp-self-contained/std",
	"sp-core/std",
	"sp-runtime/std",
]
