[package]
name = "moonbeam-core-primitives"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.1"

[dependencies]
account = { workspace = true }
hex-literal = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"account/std",
	"sp-core/std",
	"sp-runtime/std",
]
