[package]
name = "moonbeam"
authors = [ "PureStake" ]
description = "Moonbeam Collator"
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.12.3"

[package.metadata.cargo-machete]
ignored = [
	# https://github.com/bnjbvr/cargo-machete/issues/58
	# cargo-machete currently don't detect dependencies used only in features
	"moonbeam_service",
	"pallet_xcm",
	"xcm_builder",
]

[[bin]]
name = 'moonbeam'
path = 'src/main.rs'

[dependencies]
moonbeam-cli = { path = "cli", default-features = false }
moonbeam-service = { path = "service", default-features = false }

[dev-dependencies]
assert_cmd = "0.12"
hex = "0.4.3"
nix = "0.23"
serde_json = "1.0"
tempfile = "3.2.0"

# Benchmarking
pallet-xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.32" }
xcm-builder = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.32" }

[features]
default = [ "moonbase-native", "moonbeam-native", "moonriver-native" ]

kusama-native = [ "moonbeam-service/kusama-native" ]
rococo-native = [ "moonbeam-service/rococo-native" ]
westend-native = [ "moonbeam-cli/westend-native", "moonbeam-service/westend-native" ]

moonbase-native = [ "moonbeam-cli/moonbase-native", "moonbeam-service/moonbase-native" ]
moonbeam-native = [ "moonbeam-cli/moonbeam-native", "moonbeam-service/moonbeam-native" ]
moonriver-native = [ "moonbeam-cli/moonriver-native", "moonbeam-service/moonriver-native" ]

test-spec = []

runtime-benchmarks = [
	"moonbeam-cli/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]

moonbase-runtime-benchmarks = [
	"moonbeam-cli/moonbase-runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
