[package]
name = "moonbeam"
authors = { workspace = true }
description = "Moonbeam Collator"
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.47.0"

[[bin]]
name = 'moonbeam'
path = 'src/main.rs'

[dependencies]

moonbeam-cli = { workspace = true }

[features]
default = [ "moonbase-native", "moonbeam-native", "moonriver-native", "lazy-loading" ]

westend-native = [ "moonbeam-cli/westend-native" ]

moonbase-native = [ "moonbeam-cli/moonbase-native" ]
moonbeam-native = [ "moonbeam-cli/moonbeam-native" ]
moonriver-native = [ "moonbeam-cli/moonriver-native" ]

lazy-loading = ["moonbeam-cli/lazy-loading"]

runtime-benchmarks = [
	"moonbeam-cli/runtime-benchmarks"
]
