[package]
name = "node-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', version = '2.0.0-alpha.7' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', version = '2.0.0-alpha.7' }

[dev-dependencies]
sp-serializer = { git = 'https://github.com/paritytech/substrate.git', version = '2.0.0-alpha.7' }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
]
