[package]
name = 'moonbeam-runtime'
description = 'Moonbeam Runtime'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
version = '0.6.0'
authors = ["PureStake"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = "0.4.8"
hex-literal = "0.3.1"

precompiles = { path = "precompiles/", default-features = false }
account = { path = "account/", default-features = false }
pallet-ethereum-chain-id = { path = "../pallets/ethereum-chain-id", default-features = false }
parachain-staking = { path = "../pallets/parachain-staking", default-features = false }
pallet-author-filter = { path = "../pallets/author-filter", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-evm = { git = "https://github.com/purestake/frontier", default-features = false, branch = "v0.6-moonbeam" }

pallet-ethereum = { default-features = false, git = "https://github.com/purestake/frontier", branch = "v0.6-moonbeam" }
fp-rpc = { default-features = false, git = "https://github.com/purestake/frontier", branch = "v0.6-moonbeam" }

pallet-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

moonbeam-rpc-primitives-txpool = { path = "../primitives/rpc/txpool", default-features = false }

# Cumulus dependencies
cumulus-runtime = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "master" }
cumulus-parachain-system = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "master" }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "master" }

# TODO Why can't this come directly from cumulus
parachain-info = { path = "../pallets/parachain-info", default-features = false }
author-inherent = { path = "../pallets/author-inherent", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
# By default, we build the parachain runtime
default = [
	"std"
	# parachain-only dependencies can't be conditionally included here.
	# Default feature dependencies must not be optional (aparently)
]
std = [
	"parity-scale-codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"moonbeam-rpc-primitives-txpool/std",
	"fp-rpc/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-ethereum-chain-id/std",
	"pallet-democracy/std",
	"pallet-scheduler/std",
	"author-inherent/std",
	"parachain-info/std",
	"cumulus-runtime/std",
	"cumulus-parachain-system/std",
	"cumulus-primitives/std",
	"account/std",
	"parachain-staking/std",
	"pallet-author-filter/std",
]

# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	# "cumulus-upward-message/runtime-wasm",
]
