[package]
name = 'moonbeam-runtime'
description = 'Moonbeam Runtime'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
version = '0.6.0'
authors = ["PureStake"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = "0.4"
hex-literal = "0.3.1"
sha3 = { version = "0.9", default-features = false }

precompiles = { path = "precompiles/", default-features = false }
account = { path = "account/", default-features = false }
pallet-ethereum-chain-id = { path = "../pallets/ethereum-chain-id", default-features = false }
parachain-staking = { path = "../pallets/parachain-staking", default-features = false }
author-inherent = { path = "../pallets/author-inherent", default-features = false }
pallet-author-filter = { path = "../pallets/author-filter", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-evm = { git = "https://github.com/purestake/frontier", default-features = false, branch = "notlesh-moonbeam-v0.7" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

pallet-ethereum = { default-features = false, git = "https://github.com/purestake/frontier", branch = "notlesh-moonbeam-v0.7" }
fp-rpc = { default-features = false, git = "https://github.com/purestake/frontier", branch = "notlesh-moonbeam-v0.7" }

pallet-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

moonbeam-extensions-evm = { path = "extensions/evm", default-features = false }
moonbeam-rpc-primitives-debug = { path = "../primitives/rpc/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "../primitives/rpc/txpool", default-features = false }

# Cumulus dependencies
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "rococo-v1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "rococo-v1" }
parachain-info = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "rococo-v1" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[features]
# By default, we build the parachain runtime
default = [
	"std"
	# parachain-only dependencies can't be conditionally included here.
	# Default feature dependencies must not be optional (aparently)
]
std = [
	"parity-scale-codec/std",
	"serde",
	"sha3/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"moonbeam-rpc-primitives-debug/std",
	"moonbeam-rpc-primitives-txpool/std",
	"fp-rpc/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-ethereum-chain-id/std",
	"pallet-democracy/std",
	"pallet-scheduler/std",
	"pallet-collective/std",
	"author-inherent/std",
	"moonbeam-extensions-evm/std",
	"parachain-info/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"account/std",
	"parachain-staking/std",
	"pallet-author-filter/std",
]

# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	# "cumulus-upward-message/runtime-wasm",
]

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
   "sp-api/disable-logging",
]
