[package]
name = "fc-eth-log-indexer"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.1.0"

[dependencies]
futures = { version = "0.3.1", features = [ "compat" ] }
futures-timer = "3.0.2"
log = "0.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "any", "offline" ] }
tokio = { version = "1.13.0", features = [ "macros", "sync" ] }
ethereum = { version = "0.12.0", features = ["with-codec"] }

# Frontier
fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.29", features = [ "rpc_binary_search_estimate" ] }

# Substrate
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }

[dev-dependencies]
moonbase-runtime = { path = "../../runtime/moonbase" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
tempfile = "3.3.0"
# Frontier
fp-storage = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.29" }
# Substrate
beefy-primitives = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sc-client-db = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
substrate-test-runtime-client = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
ethereum-types = { version = "0.13.1" }

[features]
default = [ "sqlx/sqlite" ]
sqlite = [ "sqlx/sqlite" ]
postgres = [ "sqlx/postgres" ]
