[package]
name = "moonbeam-client-evm-tracing"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
ethereum-types = { version = "0.14" }
hex = { version = "0.4", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }

# Moonbeam
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
