[package]
name = "moonbeam-vrf"
authors = [ "PureStake" ]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", features = [ "derive" ] }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-consensus-vrf = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }

# Moonbeam
session-keys-primitives = { path = "../../primitives/session-keys" }

# Nimbus
nimbus-primitives = { workspace = true }

# Polkadot
polkadot-primitives = { workspace = true }
