[package]
name = "moonbeam-vrf"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
# Substrate
parity-scale-codec = { workspace = true, features = ["derive", "std"] }
sp-api = { workspace = true, features = ["std"] }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }

# Moonbeam
session-keys-primitives = { workspace = true, features = ["std"] }

# Nimbus
nimbus-primitives = { workspace = true, features = ["std"] }

# Other
schnorrkel = { workspace = true, default-features = false, features = [
    "preaudit_deprecated",
] }
