[package]
name = "moonbeam-cli-opt"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.35.0"

[dependencies]
bip32 = { workspace = true, features = [ "bip39" ] }
clap = { workspace = true, features = [ "derive" ] }
libsecp256k1 = { workspace = true, features = [ "std" ] }
primitive-types = { workspace = true }
sha3 = { workspace = true }
tiny-bip39 = { workspace = true }
url = { workspace = true }

# Moonbeam
account = { workspace = true, features = [ "std" ] }

# Substrate
sp-runtime = { workspace = true, features = [ "std" ] }
